database (with registered users) relocated from h2 to xml-file